Bug fix: the table listing box was not chanign the color to our new color when a table was added to cart until page reload. Same thing for removal. The issue is not solved. Created a new function. Now, when a user adds a vendor product to cart on mobile or tablem, the cart pops up automatically

--- a/public/css/rcn-vendor-package.css
+++ b/public/css/rcn-vendor-package.css
@@ -501,19 +501,15 @@
   }
   20% {
     transform: scale(0.8);
-    /* color: #ffdb58; */
   }
   40% {
     transform: scale(1);
-    /* color: #87d0db; */
   }
   60% {
     transform: scale(0.8);
-    /* color: #8cc640; */
   }
   100% {
     transform: scale(0.6);
-    color: #ff5733;
   }
 }
 
